# sauce-api-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  accountinfo.json  models.py  pyproject.toml  sauce-mcp-launcher.sh  server.json  server.py  start_appium.sh  start_rdc.sh  start_server.sh
.github/: dependabot.yml
.github/workflows/: build.yml  main.yml  publish.yml
docs/skills/: openapi-spec-guidelines.md
examples/: appium_example.py
resources/: get_job_details.json  get_org_concurrency.json  get_recent_jobs.json  get_team_concurrency.json  get_test_analytics.json  get_test_assets.json  get_test_metrics.json  log.json
src/sauce_api_mcp/: __init__.py  __main__.py  appium.py  main.py  rdc_dynamic.py  rdc_openapi.py
src/sauce_api_mcp/shared/: file_utils.py
src/sauce_mcp/: __init__.py  main.py  models.py  rdc_openapi.py  server.py
tests/: conftest.py  pytest.ini  test_basic.py  test_core_live.py  test_core_unit.py  test_e2e_flows.py  test_prompt_variations.py  test_rdc_dynamic_create_session.py  test_rdc_dynamic_e2e.py  test_rdc_dynamic_headers.py  test_rdc_dynamic_install_app.py  test_rdc_live.py  test_rdc_unit.py
