[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sauce-api-mcp"
version = "v0.1.0.beta1"
description = "An MCP server for Sauce Labs APIs"
authors = [{name = "Marcus Merrell", email = "marcus.merrell@saucelabs.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "mcp>=1.10.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sauce_mcp*"]
