[project]
name = "sauce-api-mcp"
version = "1.0.2"
description = "MCP server for Sauce Labs API"
authors = [
    {name = "Marcus Merrell", email = "marcus.merrell@saucelabs.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "pydantic",
    "mcp"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.scripts]
sauce-api-mcp = "sauce_api_mcp.__main__:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sauce_api_mcp*"]

[tool.setuptools.package-dir]
"" = "src"
